ValidatableEditText: If 'not_empty = false', validate only when there is text

--- a/inputvalidator/src/main/res/values/strings.xml
+++ b/inputvalidator/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">InputValidator</string>
-    <string name="default_not_blank_error_message">Must not be blank</string>
+    <string name="default_not_empty_error_message">Must not be empty</string>
     <string name="default_min_length_error_message">Must be more than %1$d characters</string>
     <string name="default_max_length_error_message">Must be less than %1$d characters</string>
     <string name="default_regex_error_message">Text is invalid</string>
